--- a/DATA each location.Rmd
+++ b/DATA each location.Rmd
@@ -5,6 +5,7 @@ date: "`r Sys.Date()`"
 output: pdf_document
 ---
 
+**We need to get the master temp data from another file before running this file...**
 
 ```{r get train and test unique}
 ytrain = c(2006,2013,2013,2011,2001,2011,2008,2011,2014,2002,2011,2013)
